# shellbrain

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  agentbehaviortesting.md  alembic.ini  convo-record.md  docker-compose.test.yml  docker-compose.yml  memory-system-architecture.html  memory-system-explorer.html  memory_cli.py  next_steps.md  pyproject.toml  pytest.ini  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  real-embedding-smoke.yml  release.yml
.refactor/: READ.md  final-tree-L4-app.txt
.refactor/baseline/: core-sqlalchemy-raw-rg.txt  docker-failures-categorized.md  git-status.txt  import-map-raw-rg.txt  import-map.md  infrastructure-entrypoint-refs.txt  planned-move-python-files.txt  tree-L4-app.txt
.refactor/chunk_0/: discovery.md
.refactor/chunk_1/: discovery.md  status.md
.refactor/chunk_2/: discovery.md  status.md
.refactor/chunk_3/: discovery.md  (+1 more)
.shellbrain/: episode_sync_status.json
alembic/: env.py
app/: __init__.py  __main__.py
architectures/: plan_a.md  plan_b.md  plan_d.md
docs/: CNAME  description.md  external-quickstart.md  index.html  install  page.css  page.js  readme.md  robots.txt  site.css  site.js  sitemap.xml  style.md  typing-journey-v2.html  typing-journey.html  upgrade
examples/: episode1.json
implementation/: llm-interface.md
insights/: README.md  discovery.md
migrations/: _legacy_usage_views.py  _usage_view_sql.py  env.py
notes/: local-models.md
onboarding_assets/: __init__.py
scripts/: agent_behavior_analysis.py  architecture_check  audit-attestation  cleanup_20260520_solver_backfill.py  generate_memory_ontology_constellation.py  migrate_local_postgres_to_shellbrain  run_tests  run_write_validation_tests  storage_status
shellbrain/: __main__.py
tests/: __init__.py  conftest.py
writing/: example_1.md
(+1242 files in other folders)
